templates/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app: db
    tier: database
spec:
  clusterIP: None
  selector:
    app: db # Must match the label on your pods
  ports:
    - name: postgres
      protocol: TCP
      port: 5432         # The port the Service listens to inside the cluster
      targetPort: 5432 # The port the application is listening on inside the pod
