templates/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis
    tier: backend
spec:
  type: ClusterIP
  selector:
    app: redis # Must match the label on your pods
  ports:
    - name: redis
      protocol: TCP
      port: 6379         # The port the Service listens to inside the cluster
      targetPort: 6379 # The port the application is listening on inside the pod
